kubernetes/manifests/home-assistant/templates/_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: home-assistant
    pod-security.kubernetes.io/enforce: privileged
    name: home-assistant
  name: home-assistant
