kubernetes/manifests/home-assistant/templates/mdns.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdns
  labels:
    app: hass-mdns
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: home-assistant # Ensure this matches the app label of the pods
  ports:
    - protocol: TCP
      name: mdns
      port: 5353 # Port accessible inside the cluster
      targetPort: 5353 # Port the application container listens on
    - protocol: TCP
      name: ssdp
      port: 1900 # Port accessible inside the cluster
      targetPort: 1900 # Port the application container listens on
